# alertmanager-webhook

./: Dockerfile  Makefile  config-default.yaml  pyproject.toml
.github/workflows/: python.yml
demo/: compose.yml
demo/config/alertmanager/: alertmanager.yml
demo/config/prometheus/: prometheus.yml  rules.yml
src/alertmanager_webhook/: alertmanager.py  app.py  cli.py  config.py  models.py  slack.py  state.py  utils.py  web.py
tests/: test_app.py
