[project]
name = "alertmanager-webhook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonathan Ballet", email = "jon@multani.info" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.14.0",
    "click==8.4.1",
    "httpx==0.28.1",
    "prometheus-client==0.25.0",
    "pydantic==2.13.4",
    "pyyaml==6.0.3",
    "slack-sdk==3.42.0",
    "starlette==1.2.1",
    "structlog==25.5.0",
    "uvicorn==0.49.0",
]

[project.scripts]
alertmanager-webhook = "alertmanager_webhook.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alertmanager_webhook"]

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "ruff==0.15.16",
    "types-pyyaml==6.0.12.20260518",
]

[tool.pytest]
addopts = [
    "--cov=alertmanager_webhook",
    "--cov-branch",
    "--cov-report=html",
    "--cov-report=term",
    "--doctest-modules",
    "--tb=short",
    "--verbose",
    "--verbose",
]
testpaths = [
    "NAME",
    "tests",
]

[tool.mypy]
files = [
    "src",
    "tests",
]
strict = true

[tool.ruff.lint]
ignore = [
    # It's OK to have long line
    "E501",
]
extend-select = [
    # Sort imports
    "I",
]

[tool.ruff.lint.isort]
force-single-line = true
